# Imagine

./: .gitmodules  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/Includes/Imagine/: ApplicationLayer.hpp  Header.hpp
Application/Sources/: ApplicationLayer.cpp  main.cpp
Core/: CMakeLists.txt
Core/Includes/: Core.hpp
Core/Includes/Imagine/: Core.hpp
Core/Includes/Imagine/Application/: Application.hpp  ApplicationParameters.hpp  Renderer.hpp  Window.hpp  WindowParameters.hpp
Core/Includes/Imagine/Assets/: Asset.hpp  AssetField.decl.hpp  AssetField.forward.hpp  AssetField.impl.hpp  AssetHandle.hpp  AssetImporter.hpp  AssetManager.hpp  AssetManagerBase.hpp  AssetMetadata.hpp  AssetType.hpp  FileAssetManager.hpp
Core/Includes/Imagine/Assets/ImGui/: MaterialImGui.hpp  MeshImGui.hpp  SceneImGui.hpp  ShaderImGui.hpp  TextureImGui.hpp
Core/Includes/Imagine/Assets/Importers/: MaterialSerializer.hpp  MeshImporter.hpp  MetadataSerializer.hpp  SceneImporter.hpp  ShaderSerializer.hpp  TextureImporter.hpp  TextureSerializer.hpp
Core/Includes/Imagine/Components/: Component.hpp  Physicalisable.hpp  Renderable.hpp
Core/Includes/Imagine/Core/: Buffer.hpp  BufferView.hpp  DeletionQueue.hpp  FileSystem.hpp  Graph.hpp  Hash.hpp  HeapArray.hpp  Inputs.hpp  Inputs.hpp~  InternalCore.hpp  KeyCodes.hpp  Logger.hpp  LoopBackBuffer.hpp  Macros.hpp  Map.hpp  Math.hpp  MemoryHelper.hpp  MouseButtonCodes.hpp  PlatformDetection.hpp  Profiling.hpp  RTTI.hpp  RawHeapArray.hpp  RawSparseSet.hpp  Size.hpp  SmartPointers.hpp  SparseSet.hpp  StackBuffer.hpp  TimeStep.hpp  TypeDefinition.hpp  TypeHelper.hpp  UUID.forward.hpp  UUID.hpp
Core/Includes/Imagine/Events/: ApplicationEvent.hpp  CoreEvents.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Core/Includes/Imagine/Layers/: ImGuiLayer.hpp  Layer.hpp  LayerStack.hpp  PhysicsLayer.hpp  ProjectLayer.hpp
Core/Includes/Imagine/Math/: Basics.hpp  BoundingBox.hpp  BoundingObject.hpp  BoundingSphere.hpp  ChaikinCurves.hpp  Core.hpp  Geometry.hpp  Image.hpp  ImagePixelType.hpp  Math.hpp  Mesh.hpp  MeshGraph2D.hpp  MeshGraph3D.hpp  Raycast.hpp  Shells.hpp  Transform.hpp  Triangulation.hpp  Types.hpp
Core/Includes/Imagine/Physics/: BroadPhaseLayerInterface.hpp  ObjectLayerPairFilter.hpp  ObjectVsBroadPhaseLayerFilter.hpp  PhysicsDebugRenderer.hpp  PhysicsListener.hpp  PhysicsTypeHelpers.hpp
Core/Includes/Imagine/Project/: Project.hpp  ProjectSerializer.hpp
Core/Includes/Imagine/Rendering/: CPUMesh.hpp  Camera.hpp  DrawContext.hpp  HarcodedPushConstants.hpp  Light.hpp  Material.hpp  MaterialComponents.hpp  Mesh.hpp  MeshParameters.hpp  MgnImGui.hpp  Model.cpp  Model.hpp  PushConstant.hpp  RenderObject.hpp  RenderTypes.hpp  Renderer.hpp  RendererParameters.hpp  Shader.hpp  ShaderParameters.hpp  TextureParameters.hpp  Vertex.hpp  VirtualTextures.hpp
Core/Includes/Imagine/Rendering/CPU/: CPUMaterial.hpp  CPUMaterialInstance.hpp  CPUMesh.hpp  CPUModel.hpp  CPUShader.hpp  CPUTexture2D.hpp  CPUTexture3D.hpp  CPUVirtualTexture.hpp
Core/Includes/Imagine/Rendering/GPU/: GPULightData.hpp  GPUMaterial.hpp  GPUMaterialInstance.hpp  GPUMesh.hpp  GPUSceneData.hpp  GPUTexture2D.hpp  GPUTexture3D.hpp
Core/Includes/Imagine/Scene/: Component.hpp  Entity.hpp  Physicalisable.hpp  Relationship.hpp  Renderable.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.hpp  Terrain.hpp
Core/Includes/Imagine/Scripting/: LuaScript.hpp  ScriptingLayer.hpp
Core/Platform/: CMakeLists.txt
Core/Platform/Renderer/: CMakeLists.txt
Core/Platform/Renderer/CPU_RENDERER/: CMakeLists.txt
Core/Platform/Renderer/VULKAN/: CMakeLists.txt
Core/Platform/Renderer/VULKAN/Sources/: AllocatedImage.cpp  DescriptorAllocator.cpp  DescriptorLayoutBuilder.cpp  Descriptors.cpp  PipelineBuilder.cpp  Vulkan.cpp  VulkanDeleter.cpp  VulkanFrame.cpp  VulkanFrameData.cpp  VulkanImGui.cpp  VulkanImage.cpp  (+6 more)
Core/Platform/Window/: CMakeLists.txt
Core/Platform/Window/GLFW/: CMakeLists.txt
Core/Platform/Window/HEADLESS/: CMakeLists.txt
Core/Platform/Window/SDL3/: CMakeLists.txt
Core/Sources/: Core.cpp
Core/Sources/Application/: Application.cpp  ApplicationParameters.cpp  Renderer.cpp  Window.cpp
Core/Sources/Assets/: Asset.cpp  AssetHandle.cpp  AssetImporter.cpp  AssetType.cpp  FileAssetManager.cpp
Core/Sources/Assets/ImGui/: MaterialImGui.cpp  MeshImGui.cpp  SceneImGui.cpp  ShaderImGui.cpp  TextureImGui.cpp
Core/Sources/Assets/Importers/: MaterialSerializer.cpp  MeshImporter.cpp  MetadataSerializer.cpp  SceneImporter.cpp  ShaderSerializer.cpp  TextureImporter.cpp  TextureSerializer.cpp
Core/Sources/Components/: Component.cpp  Physicalisable.cpp  Renderable.cpp
Core/Sources/Core/: Buffer.cpp  BufferView.cpp  FileSystem.cpp  Hash.cpp  HeapArray.cpp  Inputs.cpp  Logger.cpp  Math.cpp  RTTI.cpp  RawHeapArray.cpp  RawSparseSet.cpp  SparseSet.cpp  TypeDefinition.cpp  UUID.cpp
Core/Sources/Layers/: ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  PhysicsLayer.cpp  ProjectLayer.cpp
Core/Sources/Math/: BoundingBox.cpp  BoundingSphere.cpp  Image.cpp
Core/Sources/Physics/: BroadPhaseLayerInterface.cpp  ObjectLayerPairFilter.cpp  ObjectVsBroadPhaseLayerFilter.cpp  PhysicsDebugRenderer.cpp  PhysicsListener.cpp
Core/Sources/Project/: Project.cpp  ProjectSerializer.cpp
Core/Sources/Rendering/: CPUMesh.cpp  Camera.cpp  ImGui.cpp  Light.cpp  Material.cpp  MaterialComponents.cpp  Mesh.cpp  Model.cpp  PushConstant.cpp  RenderObject.cpp  Renderer.cpp  Shader.cpp
Core/Sources/Rendering/CPU/: CPUMaterial.cpp  CPUMaterialInstance.cpp  CPUMesh.cpp  CPUModel.cpp  CPUShader.cpp  CPUTexture2D.cpp  CPUTexture3D.cpp  CPUVirtualTexture.cpp
Core/Sources/Scene/: Component.cpp  Entity.cpp  Physicalisable.cpp  Renderable.cpp  Scene.cpp  SceneManager.cpp  SceneSerializer.cpp  Terrain.cpp
Core/Sources/Scripting/: LuaScript.cpp  ScriptingLayer.cpp
Libraries/: CMakeLists.txt
Libraries/lua/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Sources/: GlobalUsefullTests.hpp  TestCoreHeapArray.cpp  TestCoreRawSparseSet.cpp  TestCoreSparseSet.cpp  TestRTTI.cpp  TestScene.cpp
(+77 files in other folders)
